@@ -1,32 +1,136 @@
-dnl curl.m4 -- Find the cURL libraries.
+dnl Find the compiler and linker flags for cURL.
 dnl
-dnl Defines the macro WEBAUTH_LIB_CURL, which probes for the cURL libraries
-dnl and defines the output variables CURL_CPPFLAGS and CURL_LIBS to the
-dnl appropriate preprocessor and linker flags.
+dnl Finds the compiler and linker flags for linking with the cURL library.
+dnl Provides the --with-curl, --with-curl-lib, and --with-curl-include
+dnl configure options to specify non-standard paths to the Kerberos libraries.
+dnl Uses curl-config where available.
+dnl
+dnl Provides the macro RRA_LIB_CURL_OPTIONAL and sets the substitution
+dnl variables CURL_CPPFLAGS, CURL_LDFLAGS, and CURL_LIBS.  Also provides
+dnl RRA_LIB_CURL_SWITCH to set CPPFLAGS, LDFLAGS, and LIBS to include the cURL
+dnl libraries, saving the current values first, and RRA_LIB_CURL_RESTORE to
+dnl restore those settings to before the last RRA_LIB_CURL_SWITCH.
+dnl
+dnl Depends on RRA_SET_LDFLAGS and RRA_ENABLE_REDUCED_DEPENDS and may depend
+dnl on RRA_LIB_SSL.
 dnl
 dnl Written by Russ Allbery <rra@stanford.edu>
-dnl Copyright 2002, 2003, 2004, 2006, 2009
-dnl     Board of Trustees, Leland Stanford Jr. University
+dnl Copyright 2010 Board of Trustees, Leland Stanford Jr. University
 dnl
 dnl See LICENSE for licensing terms.
 
-AC_DEFUN([WEBAUTH_LIB_CURL],
+dnl Save the current CPPFLAGS, LDFLAGS, and LIBS settings and switch to
+dnl versions that include the cURL flags.  Used as a wrapper, with
+dnl RRA_LIB_CURL_RESTORE, around tests.
+AC_DEFUN([RRA_LIB_CURL_SWITCH],
+[rra_curl_save_CPPFLAGS="$CPPFLAGS"
+ rra_curl_save_LDFLAGS="$LDFLAGS"
+ rra_curl_save_LIBS="$LIBS"
+ CPPFLAGS="$CURL_CPPFLAGS $CPPFLAGS"
+ LDFLAGS="$CURL_LDFLAGS $LDFLAGS"
+ LIBS="$CURL_LIBS $LIBS"])
+
+dnl Restore CPPFLAGS, LDFLAGS, and LIBS to their previous values (before
+dnl RRA_LIB_CURL_SWITCH was called).
+AC_DEFUN([RRA_LIB_CURL_RESTORE],
+[CPPFLAGS="$rra_curl_save_CPPFLAGS"
+ LDFLAGS="$rra_curl_save_LDFLAGS"
+ LIBS="$rra_curl_save_LIBS"])
+
+dnl Set CURL_CPPFLAGS and CURL_LDFLAGS based on rra_curl_root,
+dnl rra_curl_libdir, and rra_curl_includedir.
+AC_DEFUN([_RRA_LIB_CURL_PATHS],
+[AS_IF([test x"$rra_curl_libdir" != x],
+    [CURL_LDFLAGS="-L$rra_curl_libdir"],
+    [AS_IF([test x"$rra_curl_root" != x],
+        [RRA_SET_LDFLAGS([CURL_LDFLAGS], [$rra_curl_root])])])
+ AS_IF([test x"$rra_curl_includedir" != x],
+    [CURL_CPPFLAGS="-I$rra_curl_includedir"],
+    [AS_IF([test x"$rra_curl_root" != x],
+        [AS_IF([test x"$rra_curl_root" != x/usr],
+            [CURL_CPPFLAGS="-I${rra_curl_root}/include"])])])])
+
+dnl Does the appropriate library checks for reduced-dependency cURL linkage.
+AC_DEFUN([_RRA_LIB_CURL_REDUCED],
+[RRA_LIB_CURL_SWITCH
+ AC_CHECK_LIB([curl], [curl_easy_init], [CURL_LIBS="-lcurl"],
+    [AC_MSG_ERROR([cannot find usable cURL library])])
+ RRA_LIB_CURL_RESTORE])
+
+dnl Does the appropriate library checks for cURL linkage without curl-config
+dnl or reduced dependencies.
+AC_DEFUN([_RRA_LIB_CURL_MANUAL],
+[AC_REQUIRE([RRA_LIB_SSL])
+ RRA_LIB_CURL_SWITCH
+ AC_CHECK_LIB([z], [inflate], [CURL_LIBS=-lz])
+ AC_CHECK_LIB([curl], [curl_easy_init], [CURL_LIBS="-lcurl $CURL_LIBS"],
+    [AC_MSG_ERROR([cannot find usable cURL library])],
+    [$CURL_LIBS $SSL_LDFLAGS $SSL_LIBS])
+ RRA_LIB_CURL_RESTORE])
+
+dnl Sanity-check the results of curl-config and be sure we can really link a
+dnl cURL program.  If that fails, clear CURL_CPPFLAGS and CURL_LIBS so that we
+dnl know we don't have usable flags and fall back on the manual check.
+AC_DEFUN([_RRA_LIB_CURL_CHECK],
+[RRA_LIB_CURL_SWITCH
+ AC_CHECK_FUNC([curl_easy_init],
+    [RRA_LIB_CURL_RESTORE],
+    [RRA_LIB_CURL_RESTORE
+     CURL_CPPFLAGS=
+     CURL_LIBS=
+     _RRA_LIB_CURL_PATHS
+     AS_IF([test x"$rra_reduced_depends" = xtrue],
+         [_RRA_LIB_CURL_REDUCED],
+         [_RRA_LIB_CURL_MANUAL])])])
+
+dnl The main macro.
+AC_DEFUN([RRA_LIB_CURL],
 [AC_REQUIRE([AC_CANONICAL_HOST])
-AC_ARG_WITH([curl],
-    AC_HELP_STRING([--with-curl=PATH], [Path to cURL install]),
-    [if test x"$withval" != xno && test x"$withval" != xyes ; then
-        CURL_LDFLAGS=-L$withval/lib
-        CURL_CPPFLAGS=-I$withval/include
-     fi])
-WEBAUTH_LDFLAGS_save=$LDFLAGS
-LDFLAGS="$LDFLAGS $CURL_LDFLAGS"
-CURL_LIBS=
-if test x"$reduced_depends" != xtrue ; then
-    AC_CHECK_LIB([z], [inflate], [CURL_LIBS=-lz])
-fi
-AC_CHECK_LIB([curl], [curl_easy_init], [CURL_LIBS=-lcurl], ,
-    [$CURL_LIBS $SSL_LIBS])
-LDFLAGS=$WEBAUTH_LDFLAGS_save
-CURL_LIBS=`echo "$CURL_LDFLAGS $CURL_LIBS" | sed 's/^  *//'`
-AC_SUBST(CURL_LIBS)
-AC_SUBST(CURL_CPPFLAGS)])
+ AC_REQUIRE([RRA_ENABLE_REDUCED_DEPENDS])
+ rra_curl_root=
+ rra_curl_libdir=
+ rra_curl_includedir=
+ rra_with_curl=
+ CURL_CPPFLAGS=
+ CURL_LDFLAGS=
+ CURL_LIBS=
+ AC_SUBST([CURL_CPPFLAGS])
+ AC_SUBST([CURL_LDFLAGS])
+ AC_SUBST([CURL_LIBS])
+
+ AC_ARG_WITH([curl],
+    [AS_HELP_STRING([--with-curl@<:@=DIR@:>@],
+        [Location of cURL headers and libraries])],
+    [AS_IF([test x"$withval" = xno],
+        [rra_use_curl=false],
+        [AS_IF([test x"$withval" != xyes], [rra_curl_root="$withval"])
+         rra_use_curl=true])])
+ AC_ARG_WITH([curl-include],
+    [AS_HELP_STRING([--with-curl-include=DIR],
+        [Location of cURL headers])],
+    [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
+        [rra_curl_includedir="$withval"])])
+ AC_ARG_WITH([curl-lib],
+    [AS_HELP_STRING([--with-curl-lib=DIR],
+        [Location of cURL libraries])],
+    [AS_IF([test x"$withval" != xyes && test x"$withval" != xno],
+        [rra_curl_libdir="$withval"])])
+
+ AC_ARG_VAR([CURL_CONFIG], [Path to curl-config])
+ AS_IF([test x"$rra_curl_root" != x && test -z "$CURL_CONFIG"],
+    [AS_IF([test -x "${rra_curl_root}/bin/curl-config"],
+        [CURL_CONFIG="${rra_curl_root}/bin/curl-config"])],
+    [AC_PATH_PROG([CURL_CONFIG], [curl-config])])
+ AS_IF([test x"$CURL_CONFIG" != x && test -x "$CURL_CONFIG"],
+    [CURL_CPPFLAGS=`"$CURL_CONFIG" --cflags 2>/dev/null`
+     CURL_LIBS=`"$CURL_CONFIG" --libs 2>/dev/null`
+     CURL_CPPFLAGS=`echo "$CURL_CPPFLAGS" | sed 's%-I/usr/include ?%%'`
+     # Work around a bug in the Mac OS X curl-config script fixed in Tiger.
+     AS_CASE([$host],
+         [powerpc-apple-darwin7*],
+         [CURL_LIBS=`echo "$CURL_LIBS" | sed 's/-arch i386//g'`])
+     _RRA_LIB_CURL_CHECK],
+    [_RRA_LIB_CURL_PATHS
+     AS_IF([test x"$rra_reduced_depends" = xtrue],
+        [_RRA_LIB_CURL_REDUCED],
+        [_RRA_LIB_CURL_MANUAL])])])
